--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "@solana/wallet-adapter-base": "^0.9.22",
     "@solana/wallet-adapter-react": "^0.15.32",
     "@solana/web3.js": "*",
+    "all": "^0.0.0",
     "assert": "^2.0.0",
     "crypto-browserify": "^3.12.0",
     "jszip": "^3.10.1",
@@ -74,7 +75,7 @@
     "xterm-addon-web-links": "^0.5.1"
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.3",
+    "@craco/craco": "^7.0.0-alpha.3",
     "@types/bn.js": "^5.1.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.21",
@@ -85,7 +86,8 @@
     "@types/styled-components": "^5.1.24",
     "circular-dependency-plugin": "^5.2.2",
     "csstype": "^3.1.2",
-    "monaco-editor-webpack-plugin": "^7.0.1"
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "tailwindcss": "^3.4.3"
   },
   "resolutions": {
     "@solana/buffer-layout": "^4.0.0",
